--- a/home/.config/mpv/mpv.conf
+++ b/home/.config/mpv/mpv.conf
@@ -55,23 +55,22 @@ audio-file-auto=fuzzy                   # external audio doesn't has to match th
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
 
 # Video
-
-#[high-quality]
-#profile-desc="High quality VO settings"
-#profile=opengl-hq
-profile=gpu-hq
 hwdec=auto
-vo=gpu
-gpu-api=vulkan
+profile=gpu-hq
 scale=ewa_lanczossharp
-cscale=ewa_lanczossoft
+cscale=ewa_lanczossharp
 dscale=mitchell
-tscale=triangle
-scale-antiring=0.8
-cscale-antiring=0.9
-dither-depth=auto
-target-prim=bt.709
-correct-downscaling=yes
+# Best interpolation settings -> https://github.com/mpv-player/mpv/issues/2685
+video-sync=display-resample
+interpolation=yes
+tscale=box
+tscale-window=sphinx
+tscale-radius=1.0
+tscale-clamp=0.0
+
+# And YouTube
+#ytdl-format=137+bestaudio/298+bestaudio/22/135+bestaudio/18/best
+ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9]+bestaudio/best
 
 
 [protocol.https]
@@ -92,7 +91,3 @@ loop-file=yes
 [extension.webm]
 no-pause
 loop-file=yes
-
-# And YouTube
-#ytdl-format=bestvideo[height<=?1440]+bestaudio/best
-ytdl-format=bestvideo+bestaudio
