--- a/home/.config/mpv/mpv.conf
+++ b/home/.config/mpv/mpv.conf
@@ -55,18 +55,7 @@ audio-file-auto=fuzzy                   # external audio doesn't has to match th
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
 
 # Video
-hwdec=auto
-profile=gpu-hq
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-dscale=mitchell
-# Best interpolation settings -> https://github.com/mpv-player/mpv/issues/2685
-video-sync=display-resample
-interpolation=yes
-tscale=box
-tscale-window=sphinx
-tscale-radius=1.0
-tscale-clamp=0.0
+gpu-context=wayland
 
 # And YouTube
 #ytdl-format=137+bestaudio/298+bestaudio/22/135+bestaudio/18/best
